Fix #35306: cycles normal mapping not working with flat shading.